﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-02-23
	Changed: Process manager now has a lot of early cancellation features to aid in faster exit.
	Internal: Added more checks for exit to avoid odd errors during it.
	Changed: Watchlist repair function is now more verbose, giving some warning about adjustments to a rule.
	Fixed: Watchlist repair was triggering on things it shouldn't.
	Fixed: Copy to clipboard for watchlist was including deprecated content.
### 2019-02-21
	Fixed: Volume meter config was not working properly in the advanced config.
### 2019-02-20
	Changed: Audio device debug is now actually under audio debug.
	Fixed: Spurious reporting of internet availability.
	Fixed: Rule edit window allowed including invalid characters in friendly name, executable and path fields, these are now caught.
	Changed: Added more error catching code where it was missing.
### 2019-02-18
	Changed: Disabled unnecessary debug output so it'll show only when relevant debug option is enabled.
### 2019-02-17
	Fixed: Some problems with the new audio management.
	Added: Volume meter, for both output and input.
	Added: Volume meter configuration.
	Added: Various configuration options to tray context menu.
	Fixed: InvalidOperationException with exclusive mode
### 2019-02-16
	Changed: Audio and Microphone management. Microphone manager now depends on Audio Manager to function.
	Fixed: Minor leaked bug.
### 2019-02-15
	Fixed: Microphone tab was empty if the associated component was loaded.
	Fixed: Potential massive bug if TM is used outside of Windows 7 with the experimental I/O priority enabled.
	Fixed: Microphone component fails to load if default device is not available at launch.
	Added: Microphone component detects changes to default comms device.
	Changed: Microphone component by default does NOT try to make changes.