@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.13...]
+### 2019-02-24
+	Internal: Some logging changes. Should not have impact to end users.
 ### 2019-02-23
 	Changed: Process manager now has a lot of early cancellation features to aid in faster exit.
 	Internal: Added more checks for exit to avoid odd errors during it.
